Fix message for TestRuns not showing on admins (#859)
Closes
https://github.com/SoftUni-Internal/exam-systems-issues/issues/934

Mapping from the TestResultServiceModel to TestRun for ExecutionResult
was added.

--- a/Servers/UI/OJS.Servers.Ui/ClientApp/src/components/submissions/details/submission-result-details/SubmissionResultsDetails.module.scss
+++ b/Servers/UI/OJS.Servers.Ui/ClientApp/src/components/submissions/details/submission-result-details/SubmissionResultsDetails.module.scss
@@ -45,6 +45,7 @@
   margin: 15px 0;
   padding: 5px 10px;
   width: 10%;
+  border-radius: 6px;
 }
 
 .warningBlockWrapper {
